tests/ui/premature_component_namespace.stderr
error[E0432]: unresolved import `moirai::component::ComponentId`
 --> tests/ui/premature_component_namespace.rs:1:5
  |
1 | use moirai::component::ComponentId;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ComponentId` in `component`

error[E0603]: module `component` is private
 --> tests/ui/premature_component_namespace.rs:1:13
  |
1 | use moirai::component::ComponentId;
  |             ^^^^^^^^^ private module
  |
note: the module `component` is defined here
 --> src/lib.rs
  |
  | mod component;
  | ^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/premature_component_namespace.rs:1:36
  |
1 | use moirai::component::ComponentId;
  |                                    ^ consider adding a `main` function to `$DIR/tests/ui/premature_component_namespace.rs`
